; ModuleID = '/home/carl/AnghaBench/h2o/lib/common/extr_http3client.c_detach_stream.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/common/extr_http3client.c_detach_stream.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_h2o_http3client_req_t = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32*, i32* }

@quicly_stream_noop_callbacks = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.st_h2o_http3client_req_t*)* @detach_stream to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @detach_stream(%struct.st_h2o_http3client_req_t* %0) #0 {
  %2 = alloca %struct.st_h2o_http3client_req_t*, align 8
  store %struct.st_h2o_http3client_req_t* %0, %struct.st_h2o_http3client_req_t** %2, align 8
  %3 = load %struct.st_h2o_http3client_req_t*, %struct.st_h2o_http3client_req_t** %2, align 8
  %4 = getelementptr inbounds %struct.st_h2o_http3client_req_t, %struct.st_h2o_http3client_req_t* %3, i32 0, i32 0
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 1
  store i32* @quicly_stream_noop_callbacks, i32** %6, align 8
  %7 = load %struct.st_h2o_http3client_req_t*, %struct.st_h2o_http3client_req_t** %2, align 8
  %8 = getelementptr inbounds %struct.st_h2o_http3client_req_t, %struct.st_h2o_http3client_req_t* %7, i32 0, i32 0
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  store i32* null, i32** %10, align 8
  %11 = load %struct.st_h2o_http3client_req_t*, %struct.st_h2o_http3client_req_t** %2, align 8
  %12 = getelementptr inbounds %struct.st_h2o_http3client_req_t, %struct.st_h2o_http3client_req_t* %11, i32 0, i32 0
  store %struct.TYPE_2__* null, %struct.TYPE_2__** %12, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
